--- a/production/package.json
+++ b/production/package.json
@@ -12,5 +12,8 @@
     "express": "^4.16.3",
     "matter-js": "^0.20.0",
     "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
